# dealhunter

./: Enter file in which to save the key:  Enter file in which to save the key:.pub  main.py  pyproject.toml
data/: dealhunter.db
dealhunter/: engine.py  main.py
dealhunter/database/: init_db.py  models.py  repository.py  session.py
dealhunter/filters/: ingredients.py
dealhunter/models/: product.py
dealhunter/ranking/: scorer.py
dealhunter/scrapers/: base.py  demo.py
dealhunter/utils/: logging.py
tests/: test_database.py  test_ingredients.py  test_product.py
