[project]
name = "dealhunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.3",
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "ruff>=0.15.21",
    "sqlalchemy>=2.0.51",
]
